--- a/app/templates/contents/members-area/statistics/index.html.twig
+++ b/app/templates/contents/members-area/statistics/index.html.twig
@@ -16,7 +16,7 @@
     </ol>
     <div id="main-content">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         {{ 'Users' | trans }}
@@ -29,9 +29,9 @@
                             </span>
                         </li>
                     </ul>
-                </div>
-            </div> <!-- /.col-md-6 -->
-            <div class="col-md-6">
+                </div> <!-- /.panel -->
+            </div> <!-- /.col-md-4 -->
+            <div class="col-md-4">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         {{ 'Roles' | trans }}
@@ -44,8 +44,23 @@
                             </span>
                         </li>
                     </ul>
-                </div>
-            </div> <!-- /.col-md-6 -->
+                </div> <!-- /.panel -->
+            </div> <!-- /.col-md-4 -->
+            <div class="col-md-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        {{ 'Posts' | trans }}
+                    </div>
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            {{ 'Total' | trans }}
+                            <span class="badge">
+                                {{ app['orm.em'].getRepository('Application\\Entity\\PostEntity').countAll() }}
+                            </span>
+                        </li>
+                    </ul>
+                </div> <!-- /.panel -->
+            </div> <!-- /.col-md-4 -->
         </div> <!-- /.row -->
     </div>
 {% endblock %}
