--- a/app/templates/contents/members-area/posts/list.html.twig
+++ b/app/templates/contents/members-area/posts/list.html.twig
@@ -21,14 +21,13 @@
 		</li>
 	</ol>
 	<div class="table-responsive">
-		<table class="table table-striped table-condensed{% if posts|length %} data-table dt-responsive{% endif %}"
-			cellspacing="0" width="100%">
+		<table class="table table-striped table-condensed">
 			<thead>
 				<tr>
-					<th class="all">{{ 'Title'|trans }}</th>
-					<th class="no-sort">{{ 'Image'|trans }}</th>
+					<th>{{ 'Title'|trans }}</th>
+					<th>{{ 'Image'|trans }}</th>
 					<th>{{ 'Time created'|trans }}</th>
-					<th class="no-sort" width="80">{{ 'Actions'|trans }}</th>
+					<th width="100">{{ 'Actions'|trans }}</th>
 				</tr>
 			</thead>
 			<tbody>
