--- a/app/templates/contents/members-area/roles/list.html.twig
+++ b/app/templates/contents/members-area/roles/list.html.twig
@@ -21,15 +21,15 @@
 		</li>
 	</ol>
 	<div class="table-responsive">
-		<table class="table table-striped table-condensed{% if roles|length %} data-table dt-responsive{% endif %}" cellspacing="0" width="100%">
+		<table class="table table-striped table-condensed">
 			<thead>
 				<tr>
-					<th class="all">{{ 'Name'|trans }}</th>
+					<th>{{ 'Name'|trans }}</th>
 					<th>{{ 'Description'|trans }}</th>
 					<th>{{ 'Role'|trans }}</th>
 					<th>{{ 'Priority'|trans }}</th>
 					<th>{{ 'Created'|trans }}</th>
-					<th class="no-sort" width="100">{{ 'Actions'|trans }}</th>
+					<th width="100">{{ 'Actions'|trans }}</th>
 				</tr>
 			</thead>
 			<tbody>
