--- a/app/templates/contents/members-area/users/list.html.twig
+++ b/app/templates/contents/members-area/users/list.html.twig
@@ -20,7 +20,7 @@
 		</li>
 	</ol>
 	<div class="table-responsive">
-		<table class="table table-striped table-condensed" cellspacing="0" width="100%">
+		<table class="table table-striped table-condensed">
 			<thead>
 				<tr>
 					<th>{{ 'Email' | trans }}</th>
