--- a/app/templates/contents/members-area/users/list.html.twig
+++ b/app/templates/contents/members-area/users/list.html.twig
@@ -23,20 +23,18 @@
 		<table class="table table-striped table-condensed">
 			<thead>
 				<tr>
-					<th>{{ 'Email' | trans }}</th>
-					<th>{{ 'Username' | trans}}</th>
+					<th>{{ paginator_sortable(pagination, 'Email', 'u.email') }}</th>
+					<th>{{ paginator_sortable(pagination, 'Username', 'u.username') }}</th>
 					<th width="150">{{ 'Profile' | trans }}</th>
 					<th width="140">{{ 'Statuses' | trans }}</th>
-					<th width="200">
-						{{ 'Roles' | trans }}
-					</th>
-					<th width="160">{{ 'Time created' | trans}}</th>
-					<th width="160">{{ 'Time last active' | trans }}</th>
+					<th width="200">{{ 'Roles' | trans }}</th>
+					<th width="160">{{ paginator_sortable(pagination, 'Time created', 'u.timeCreated') }}</th>
+					<th width="160">{{ paginator_sortable(pagination, 'Time last active', 'u.timeLastActive') }}</th>
 					<th width="200">{{ 'Actions'|trans }}</th>
 				</tr>
 			</thead>
 			<tbody>
-				{% for user in users %}
+				{% for user in pagination.getItems() %}
 					<tr class="{{ user.isLocked() ? 'danger' : '' }}">
 						<td>{{ user.getEmail() }}</td>
 						<td>{{ user.getUsername() }}</td>
