--- a/app/templates/layouts/content/default.html.twig
+++ b/app/templates/layouts/content/default.html.twig
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta http-equiv="cleartype" content="on" />
 		<meta name="author" content="{{ app.author }}" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta name="HandheldFriendly" content="True" />
 		<meta name="MobileOptimized" content="480" />
 		<!-- Stylesheets -->
