--- a/app/templates/contents/members-area/roles/list.html.twig
+++ b/app/templates/contents/members-area/roles/list.html.twig
@@ -24,22 +24,22 @@
 		<table class="table table-striped table-condensed">
 			<thead>
 				<tr>
-					<th>{{ 'Name'|trans }}</th>
-					<th>{{ 'Description'|trans }}</th>
-					<th>{{ 'Role'|trans }}</th>
-					<th>{{ 'Priority'|trans }}</th>
-					<th>{{ 'Created'|trans }}</th>
+					<th>{{ paginator_sortable(pagination, 'Name', 'r.name') }}</th>
+					<th>{{ paginator_sortable(pagination, 'Description', 'r.description') }}</th>
+					<th>{{ paginator_sortable(pagination, 'Role', 'r.role') }}</th>
+					<th>{{ paginator_sortable(pagination, 'Priority', 'r.priority') }}</th>
+					<th>{{ paginator_sortable(pagination, 'Time Created', 'r.timeCreated') }}</th>
 					<th width="100">{{ 'Actions'|trans }}</th>
 				</tr>
 			</thead>
 			<tbody>
-				{% for role in roles %}
+				{% for role in pagination.getItems() %}
 					<tr>
 						<td>{{ role.getName()|trans }}</td>
 						<td>{{ role.getDescription()|trans }}</td>
 						<td>{{ role.getRole() }}</td>
 						<td>{{ role.getPriority() }}</td>
-						<td>{{ role.getTimeCreated() | date('Y-m-d H:i:s') }}</td>
+						<td>{{ role.getTimeCreated() | date(app.dateTimeFormat) }}</td>
 						<td>
 							<a class="btn btn-sm btn-default filter-submit margin-bottom"
 								data-toggle="tooltip" title="{{ 'Edit'|trans }}"
@@ -60,5 +60,6 @@
 				{% endfor %}
 			</tbody>
 		</table>
+		{{ paginator_render(pagination) }}
 	</div>
 {% endblock %}
