--- a/app/templates/contents/members-area/posts/list.html.twig
+++ b/app/templates/contents/members-area/posts/list.html.twig
@@ -24,14 +24,15 @@
 		<table class="table table-striped table-condensed">
 			<thead>
 				<tr>
-					<th>{{ 'Title'|trans }}</th>
+					<th>{{ paginator_sortable(pagination, 'Title', 'p.title') }}</th>
 					<th>{{ 'Image'|trans }}</th>
-					<th>{{ 'Time created'|trans }}</th>
+					<th>{{ paginator_sortable(pagination, 'User', 'u.username') }}</th>
+					<th width="160">{{ paginator_sortable(pagination, 'Time Created', 'p.timeCreated') }}</th>
 					<th width="100">{{ 'Actions'|trans }}</th>
 				</tr>
 			</thead>
 			<tbody>
-				{% for post in posts %}
+				{% for post in pagination.getItems() %}
 					<tr>
 						<td>{{ post.getTitle() }}</td>
 						<th>
@@ -41,7 +42,8 @@
 								</a>
 							{% endif %}
 						</th>
-						<td>{{ post.getTimeCreated()|date('Y-m-d H:i:s') }}</td>
+						<td>{{ post.getUser()}}</td>
+						<td>{{ post.getTimeCreated()|date(app.dateTimeFormat) }}</td>
 						<td>
 							<a class="btn btn-sm btn-default filter-submit margin-bottom"
 								data-toggle="tooltip" title="{{ 'Edit'|trans }}"
