Minor styling changes

--- a/app/templates/contents/members-area/posts/list.html.twig
+++ b/app/templates/contents/members-area/posts/list.html.twig
@@ -45,12 +45,12 @@
 						<td>{{ post.getUser()}}</td>
 						<td>{{ post.getTimeCreated()|date(app.dateTimeFormat) }}</td>
 						<td>
-							<a class="btn btn-sm btn-default filter-submit margin-bottom"
+							<a class="btn btn-sm btn-default"
 								data-toggle="tooltip" title="{{ 'Edit'|trans }}"
 								href="{{ url('members-area.posts.edit', { id : post.getId() }) }}">
 								<i class="fa fa-fw fa-cog"></i>
 							</a>
-							<a class="btn btn-sm btn-default filter-submit margin-bottom"
+							<a class="btn btn-sm btn-danger"
 								data-toggle="tooltip" title="{{ 'Remove'|trans }}"
 								href="{{ url('members-area.posts.remove', { id : post.getId() }) }}">
 								<i class="fa fa-fw fa-times"></i>
