--- a/app/templates/contents/members-area/register.html.twig
+++ b/app/templates/contents/members-area/register.html.twig
@@ -5,13 +5,9 @@
 {% block main %}
 	<h1 class="text-center">{{ 'Register'|trans }}</h1>
 	<hr />
-	{% if success is defined %}
-		<div class="alert alert-success">
-			{{ successMessage|trans }}
-		</div>
-	{% elseif error is defined %}
-		<div class="alert alert-danger">
-			{{ errorMessage|trans }}
+    {% if alert %}
+		<div class="alert alert-{{ alert }}">
+			{{ alertMessage | trans | raw }}
 		</div>
 	{% else %}
 		{{ form(form) }}
