--- a/app/templates/contents/members-area/reset-password.html.twig
+++ b/app/templates/contents/members-area/reset-password.html.twig
@@ -5,16 +5,12 @@
 {% block main %}
 	<h1 class="text-center">{{ 'Reset password'|trans }}</h1>
 	<hr />
-	{% if success is defined %}
-		<div class="alert alert-success">
-			{{ successMessage|trans }}
-		</div>
-	{% elseif error is defined %}
-		<div class="alert alert-danger">
-			{{ errorMessage|trans }}
-		</div>
+    {% if alert %}
+        <div class="alert alert-{{ alert }}">
+            {{ alertMessage | trans | raw }}
+        </div>
 	{% endif %}
-	{% if success is not defined and error is not defined %}
+	{% if alert == false %}
 		{% if action == 'reset' %}
 			<form id="reset-password-reset-form" class="form" role="form" action="{{ url('members-area.reset-password', { code : code }) }}" method="POST">
 				{{ form_errors(form) }}
