--- a/app/templates/contents/members-area/settings/index.html.twig
+++ b/app/templates/contents/members-area/settings/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'layouts/content/members-area.html.twig' %}
 
-{% block title %}{{ 'Settings'|trans }} | {{ parent() }}{% endblock %}
+{% block title %}{{ 'Settings' | trans }} | {{ parent() }}{% endblock %}
 
 {% block main %}
-    <h1>{{ 'Settings'|trans }}</h1>
+    <h1>{{ 'Settings' | trans }}</h1>
     <ol class="breadcrumb">
         <li>
             <a href="{{ url('members-area') }}">
@@ -15,6 +15,8 @@
         </li>
     </ol>
     <div id="main-content">
-        {{ 'members-area.settings.contentText' | trans }}
+        <div id="settings-form-wrapper">
+            {{ form(form) }}
+        </div>
     </div>
 {% endblock %}
