--- a/app/templates/contents/members-area/roles/list.html.twig
+++ b/app/templates/contents/members-area/roles/list.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layouts/content/members-area.html.twig' %}
 
-{% block title %}{{ 'Roles'|trans }} | {{ parent() }}{% endblock %}
+{% block title %}{{ 'Roles' | trans }} | {{ parent() }}{% endblock %}
 
 {% block main %}
 	<h1>
@@ -41,21 +41,25 @@
 						<td>{{ role.getPriority() }}</td>
 						<td>{{ role.getTimeCreated() | date(app.dateTimeFormat) }}</td>
 						<td>
-							<a class="btn btn-sm btn-default"
-								data-toggle="tooltip" title="{{ 'Edit'|trans }}"
-								href="{{ url('members-area.roles.edit', { id : role.getId() }) }}">
+							<a class="btn btn-xs btn-default"
+								data-toggle="tooltip"
+                                title="{{ 'Edit' | trans }}"
+								href="{{ url('members-area.roles.edit', { id: role.getId() }) }}">
 								<i class="fa fa-fw fa-cog"></i>
 							</a>
-							<a class="btn btn-sm btn-danger"
-								data-toggle="tooltip" title="{{ 'Remove'|trans }}"
-								href="{{ url('members-area.roles.remove', { id : role.getId() }) }}">
+							<a class="btn btn-xs btn-danger"
+								data-toggle="tooltip"
+                                title="{{ 'Remove' | trans }}"
+								href="{{ url('members-area.roles.remove', { id: role.getId() }) }}">
 								<i class="fa fa-fw fa-times"></i>
 							</a>
 						</td>
 					</tr>
 				{% else %}
 					<tr>
-						<td colspan="99">{{ 'No roles yet'|trans }}</td>
+						<td colspan="9">
+                            {{ 'No roles yet' | trans }}
+                        </td>
 					</tr>
 				{% endfor %}
 			</tbody>
