--- a/app/templates/contents/members-area/roles/remove.html.twig
+++ b/app/templates/contents/members-area/roles/remove.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layouts/content/members-area.html.twig' %}
 
-{% block title %}{{ 'Remove'|trans }} | {{ 'Roles'|trans }} | {{ parent() }}{% endblock %}
+{% block title %}{{ 'Remove' | trans }} | {{ 'Roles' | trans }} | {{ parent() }}{% endblock %}
 
 {% block main %}
 	<h1>
@@ -23,16 +23,18 @@
 		</li>
 	</ol>
 	<div class="alert alert-block alert-warning">
-		<h4 class="alert-heading">{{ 'Warning!'|trans }}</h4>
-		<p>{{ 'Are you sure you want to remove this role?'|trans }}</p>
+		<h4 class="alert-heading">
+            {{ 'Warning!' | trans }}
+        </h4>
+		<p>{{ 'Are you sure you want to remove this role?' | trans }}</p>
 		<p>
 			<a class="btn btn-danger"
-				href="{{ url('members-area.roles.remove', { id : role.getId() }) }}?action=confirm">
-				{{ 'Confirm'|trans }}
+				href="{{ url('members-area.roles.remove', { id: role.getId(), action: 'confirm' }) }}">
+				{{ 'Confirm' | trans }}
 			</a>
 			<a class="btn btn-success"
 				href="{{ url('members-area.roles') }}">
-				{{ 'Cancel'|trans }}
+				{{ 'Cancel' | trans }}
 			</a>
 		</p>
 	</div>
