--- a/app/templates/contents/members-area/users/remove.html.twig
+++ b/app/templates/contents/members-area/users/remove.html.twig
@@ -1,10 +1,10 @@
 {% extends 'layouts/content/members-area.html.twig' %}
 
-{% block title %}{{ 'Remove'|trans }} | {{ 'Users'|trans }} | {{ parent() }}{% endblock %}
+{% block title %}{{ 'Remove' | trans }} | {{ 'Users' | trans }} | {{ parent() }}{% endblock %}
 
 {% block main %}
 	<h1>
-		{{ 'Remove User'|trans }}
+		{{ 'Remove User' | trans }}
 		<small>"{{ user }}"</small>
 	</h1>
 	<ol class="breadcrumb">
@@ -23,11 +23,19 @@
 		</li>
 	</ol>
 	<div class="alert alert-block alert-warning">
-		<h4 class="alert-heading">{{ 'Warning!'|trans }}</h4>
-		<p>{{ 'Are you sure you want to remove this user?'|trans }}</p>
+		<h4 class="alert-heading">
+            {{ 'Warning!' | trans }}
+        </h4>
+		<p>{{ 'Are you sure you want to remove this user?' | trans }}</p>
 		<p>
-			<a class="btn btn-danger" href="{{ url('members-area.users.remove', { id : user.getId() }) }}?action=confirm">{{ 'Confirm'|trans }}</a>
-			<a class="btn btn-success" href="{{ url('members-area.users') }}">{{ 'Cancel'|trans }}</a>
+			<a class="btn btn-danger"
+                href="{{ url('members-area.users.remove', { id: user.getId(), action: 'confirm' }) }}">
+                {{ 'Confirm' | trans }}
+            </a>
+			<a class="btn btn-success"
+                href="{{ url('members-area.users') }}">
+                {{ 'Cancel' | trans }}
+            </a>
 		</p>
 	</div>
 {% endblock %}
