Email templates fixes and send confirmation email on password confirm

--- a/app/templates/emails/users/reset-password-confirmation.html.twig
+++ b/app/templates/emails/users/reset-password-confirmation.html.twig
@@ -5,10 +5,10 @@
         <tr>
             <td class="wrapper last">
                 <h4>
-                    {{ 'Hello' | trans }}
+                    {{ 'Hello' | trans }} 
                     <b>{{ user.getProfile().getFullName() }}</b>!
                 </h4>
-                <p>{{ 'Thanks for joining'|trans }}!</p>
+                <p>{{ 'Your password as been successfully changed!' | trans }}</p>
             </td>
         </tr>
     </table>
