--- a/app/templates/emails/users/lock.html.twig
+++ b/app/templates/emails/users/lock.html.twig
@@ -4,20 +4,24 @@
     <table class="row note">
         <tr>
             <td class="wrapper last">
-                <h4>{{ 'Hello'|trans }} <b>{{ user.getProfile().getFirstName()  }}</b>!</h4>
-                <p>
-                     {{ 'You have been locked because'|trans }}:
-                </p>
-                <table class="twelve columns">
-                <tr>
-                    <td class="panel">
-                        {{ user.getLockedReason() ?: ('testLockedReasonText' | trans) }}
-                    </td>
-                    <td class="expander"></td>
-                </tr>
-                </table>
+                <h4>
+                    {{ 'Hello' | trans }} 
+                    <b>{{ user.getProfile().getFullName() }}</b>!
+                </h4>
+                <p>{{ 'You have been locked' | trans }}!</p>
+                {% if user.getLockedReason() %}
+                    <h5>{{ 'Reason' | trans }}:</h5>
+                    <table class="twelve columns">
+                        <tr>
+                            <td class="panel">
+                                {{ user.getLockedReason() }}
+                            </td>
+                            <td class="expander"></td>
+                        </tr>
+                    </table>
+                    <p></p>
+                {% endif %}
             </td>
         </tr>
     </table>
-    <p></p>
 {% endblock %}
