--- a/app/templates/emails/users/reset-password.html.twig
+++ b/app/templates/emails/users/reset-password.html.twig
@@ -1,27 +1,26 @@
 {% extends 'layouts/email.html.twig' %}
 
 {% block main %}
-	<table class="row note">
-		<tr>
-			<td class="wrapper last">
-				<h4>{{ 'Hello'|trans }} <b>{{ user.getProfile().getFirstName()  }}</b>!</h4>
-				<p>
-					 {{ 'Please click the link below, to reset your password'|trans }}:
-				</p>
-				<table class="twelve columns" style="margin-bottom: 10px">
-				<tr>
-					<td class="panel">
-						<a href="{{ app.baseUrl }}/members-area/reset-password?code={{ user.getResetPasswordCode() }}" target="_blank">
-							{{ app.baseUrl }}/members-area/reset-password?code={{ user.getResetPasswordCode() }}
-						</a>
-					</td>
-					<td class="expander"></td>
-				</tr>
-				</table>
-				<p>
-					 {{ 'If the link does not work, copy and paste it into your browser window'|trans }}
-				</p>
-			</td>
-		</tr>
-	</table>
+    <table class="row note">
+        <tr>
+            <td class="wrapper last">
+                <h4>
+                    {{ 'Hello' | trans }}
+                    <b>{{ user.getProfile().getFullName()  }}</b>!
+                </h4>
+                <p>{{ 'Please click the link below, to reset your password' | trans }}:</p>
+                <table class="twelve columns">
+                    <tr>
+                        <td class="panel">
+                            <a href="{{ url('members-area.reset-password', { code : user.getResetPasswordCode() }) }}" target="_blank">
+                                {{ url('members-area.reset-password', { code : user.getResetPasswordCode() }) }}
+                            </a>
+                        </td>
+                        <td class="expander"></td>
+                    </tr>
+                </table>
+                <p>{{ 'If the link does not work, copy and paste it into your browser window' | trans }}</p>
+            </td>
+        </tr>
+    </table>
 {% endblock %}
