--- a/app/templates/layouts/content/members-area/_parts/footer-links.html.twig
+++ b/app/templates/layouts/content/members-area/_parts/footer-links.html.twig
@@ -1,13 +1,20 @@
 <div id="footer-links">
-    <ul id="footer-links-list" class="list-unstyled text-center">
+    <ul id="footer-links-list"
+        class="list-unstyled text-center">
         <li>
-            <a href="{{ app.baseUrl }}/members-area/login">{{ 'Login'|trans }}</a>
+            <a href="{{ app.baseUrl }}/members-area/login">
+                {{ 'Login' | trans }}
+            </a>
         </li>
         <li>
-            <a href="{{ app.baseUrl }}/members-area/register">{{ 'Register'|trans }}</a>
+            <a href="{{ app.baseUrl }}/members-area/register">
+                {{ 'Register' | trans }}
+            </a>
         </li>
         <li>
-            <a href="{{ app.baseUrl }}/members-area/reset-password">{{ 'Reset password'|trans }}</a>
+            <a href="{{ app.baseUrl }}/members-area/reset-password">
+                {{ 'Reset password' | trans }}
+            </a>
         </li>
     </ul> <!-- /#footer-links-list -->
 </div> <!-- /#footer-links -->
