--- a/app/templates/contents/members-area/users/_form.html.twig
+++ b/app/templates/contents/members-area/users/_form.html.twig
@@ -1,1 +1,23 @@
-{{ form(form) }}
+{{ form_start(form) }}
+    {{ form_errors(form) }}
+    <div class="row">
+        <div class="col-md-4">
+            <h3>{{ 'Profile' | trans }}</h3>
+            {{ form_row(form.profile) }}
+        </div>
+        <div class="col-md-4">
+            <h3>{{ 'Account' | trans }}</h3>
+            {{ form_row(form.username) }}
+            {{ form_row(form.email) }}
+            {{ form_row(form.plainPassword) }}
+        </div>
+        <div class="col-md-4">
+            <h3>{{ 'Statuses' | trans }}</h3>
+            {{ form_row(form.enabled) }}
+            {{ form_row(form.locked) }}
+            <h3>{{ 'Other' | trans }}</h3>
+            {{ form_row(form.roles) }}
+        </div>
+    </div>
+    {{ form_row(form.submitButton) }}
+{{ form_end(form) }}
