--- a/app/templates/contents/members-area/reset-password.html.twig
+++ b/app/templates/contents/members-area/reset-password.html.twig
@@ -13,62 +13,6 @@
         </div>
     {% endif %}
     {% if alert == false %}
-        {% if action == 'reset' %}
-            <form id="reset-password-reset-form" 
-                class="form" 
-                role="form" 
-                action="{{ url('members-area.reset-password', { code: code }) }}" 
-                method="POST">
-                {{ form_errors(form) }}
-                <div class="form-group {{ form_has_errors(form.plainPassword) ? 'has-error' : '' }}">
-                    <label class="control-label" for="password-input">
-                        {{ 'New password' | trans }}
-                    </label>
-                    <input id="password-input"
-                        class="form-control"
-                        type="password"
-                        name="plainPassword"
-                        value="{{ form_value(form.plainPassword) }}" />
-                    <div class="help-text">
-                        {{ form_errors(form.plainPassword) }}
-                    </div>
-                </div>
-                <div class="form-group">
-                    <button id="submit-buttom" 
-                        class="btn btn-default btn-lg btn-block"
-                        type="submit">
-                        {{ 'Reset password' | trans }}
-                    </button>
-                </div>
-                {{ form_widget(form.csrf_token) }}
-            </form>
-        {% else %}
-            <form id="reset-password-request-form"
-                class="form"
-                role="form"
-                action="{{ url('members-area.reset-password') }}"
-                method="POST">
-                {{ form_errors(form) }}
-                <div class="form-group {{ form_has_errors(form.email) ? 'has-error' : '' }}">
-                    <label class="control-label" for="email-input">
-                        {{ 'Email' | trans }}
-                    </label>
-                    <input id="email-input"
-                        class="form-control"
-                        type="text"
-                        name="email"
-                        value="{{ form_value(form.email) }}" />
-                    {{ form_errors(form.email) }}
-                </div>
-                <div class="form-group">
-                    <button id="submit-buttom"
-                        class="btn btn-default btn-lg btn-block"
-                        type="submit">
-                        {{ 'Reset password' | trans }}
-                    </button>
-                </div>
-                {{ form_widget(form.csrf_token) }}
-            </form>
-        {% endif %}
+        {{ form(form) }}
     {% endif %}
 {% endblock %}
