--- a/app/templates/emails/users/reset-password-confirmation.html.twig
+++ b/app/templates/emails/users/reset-password-confirmation.html.twig
@@ -8,7 +8,7 @@
                     {{ 'Hello' | trans }}
                     <b>{{ user.getProfile().getFullName() }}</b>!
                 </h4>
-                <p>{{ 'Your password as been successfully changed!' | trans }}</p>
+                <p>{{ 'Your password has been successfully changed!' | trans }}</p>
             </td>
         </tr>
     </table>
