Added pagination related stuff

--- a/app/templates/layouts/content/default.html.twig
+++ b/app/templates/layouts/content/default.html.twig
@@ -92,6 +92,7 @@
                 </script>
                 <script id="bootstrap-js" type="text/javascript" src="{{ app.baseUri }}/assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
                 <script id="moment-js" type="text/javascript" src="{{ app.baseUri }}/assets/vendor/moment/min/moment-with-locales.min.js"></script>
+                 <script id="uri-js" type="text/javascript" src="{{ app.baseUri }}/assets/vendor/uri.js/src/URI.min.js"></script>
                 <script id="helpers-js" type="text/javascript" src="{{ app.baseUri }}/assets/javascripts/helpers.js"></script>
                 <script id="application-js" type="text/javascript" src="{{ app.baseUri }}/assets/javascripts/application.js?version={{ app.version }}"></script>
                 <script id="application-initialize-js">
