--- a/app/templates/contents/members-area/posts/list.html.twig
+++ b/app/templates/contents/members-area/posts/list.html.twig
@@ -20,6 +20,7 @@
             {{ 'Posts' | trans }}
         </li>
     </ol>
+    {{ paginator_top_render(pagination) }}
     <div class="table-responsive">
         <table class="table table-striped table-condensed">
             <thead>
@@ -68,6 +69,6 @@
                 {% endfor %}
             </tbody>
         </table>
-        {{ paginator_render(pagination) }}
     </div>
+    {{ paginator_bottom_render(pagination) }}
 {% endblock %}
