--- a/app/templates/contents/members-area/users/list.html.twig
+++ b/app/templates/contents/members-area/users/list.html.twig
@@ -19,6 +19,7 @@
             {{ 'Users' | trans }}
         </li>
     </ol>
+    {{ paginator_top_render(pagination) }}
     <div class="table-responsive">
         <table class="table table-striped table-condensed">
             <thead>
@@ -146,6 +147,6 @@
                 {% endfor %}
             </tbody>
         </table>
-        {{ paginator_render(pagination) }}
     </div>
+    {{ paginator_bottom_render(pagination) }}
 {% endblock %}
