--- a/app/templates/contents/members-area/posts/_form.html.twig
+++ b/app/templates/contents/members-area/posts/_form.html.twig
@@ -22,7 +22,7 @@
                     {{ form_widget(postMeta) }}
                     <div class="clearfix">
                         <div class="pull-right">
-                            <a class="btn btn-xs btn-danger remove-meta-button"
+                            <a class="btn btn-xs btn-danger remove-post-meta-button"
                                 href="#">
                                 <i class="fa fa-times"></i>
                             </a>
